<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272629"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"

            android:text="@string/calculator"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <ImageView
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="0.15"
            app:srcCompat="@android:drawable/ic_menu_recent_history" />

    </LinearLayout>

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10sp"
        android:layout_weight="1"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10sp"
        android:layout_weight="1"

        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="45sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:background="@android:color/background_dark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/btn_all_clean"
                style="@style/Button"
                android:text="@string/ac" />

            <TextView
                android:id="@+id/btn_left_bracket"
                style="@style/Button"
                android:text="@string/left_bracket" />

            <TextView
                android:id="@+id/btn_right_bracket"
                style="@style/Button"
                android:text="@string/right_bracket" />

            <TextView
                android:id="@+id/btn_div"
                style="@style/Button"
                android:text="@string/div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_7"
                style="@style/Button"
                android:text="@string/seven" />

            <TextView
                android:id="@+id/btn_8"
                style="@style/Button"
                android:text="@string/eight" />

            <TextView
                android:id="@+id/btn_9"
                style="@style/Button"
                android:text="@string/nine" />


            <TextView
                android:id="@+id/btn_mult"
                style="@style/Button"
                android:text="@string/mult" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_4"
                style="@style/Button"
                android:text="@string/four" />


            <TextView
                android:id="@+id/btn_5"
                style="@style/Button"
                android:text="@string/five" />


            <TextView
                android:id="@+id/btn_6"
                style="@style/Button"
                android:text="@string/six" />


            <TextView
                android:id="@+id/btn_minus"
                style="@style/Button"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/btn_1"
                style="@style/Button"
                android:text="@string/one" />


            <TextView
                android:id="@+id/btn_2"
                style="@style/Button"
                android:text="@string/two" />


            <TextView
                android:id="@+id/btn_3"
                style="@style/Button"
                android:text="@string/three" />


            <TextView
                android:id="@+id/btn_plus"
                style="@style/Button"
                android:text="@string/plus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_dot"
                style="@style/Button"
                android:text="@string/dot" />


            <TextView
                android:id="@+id/btn_0"
                style="@style/Button"
                android:text="@string/zero" />


            <ImageButton
                android:id="@+id/btn_del"
                style="@style/Button"
                app:srcCompat="@android:drawable/ic_input_delete" />

            <TextView
                android:id="@+id/btn_equal"
                style="@style/Button"
                android:text="@string/equal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>